"Correction of 3d Slider"

--- a/TA28/index.html
+++ b/TA28/index.html
@@ -15,6 +15,9 @@
             </div>
             <div class="content-c">
                 <div class="content-slider">
+                    <!-- La primera figura es para provocar que la última quede en el medio-->
+                    <figure></figure>
+                    <figure><a href="https://github.com/mednologic/"><button type="button" class="button">Github</button></a></figure>
                     <figure><a href="ejercicio1.html"><button type="button" class="button">Ejercicio 1</button></a></figure>
                     <figure><a href="ejercicio2.html"><button type="button" class="button">Ejercicio 2</button></a></figure>
                     <figure><a href="ejercicio3.html"><button type="button" class="button">Ejercicio 3</button></a></figure>
@@ -25,6 +28,12 @@
                 
             </div>
             <h1 class="h1_nom">J.Oriol López Bosch UD28</h1>
+                <form method="get" action="ejercicio1.html"><button class="button_sel">Ejercicio 1</button></form>
+                <form method="get" action="ejercicio2.html"><button class="button">Ejercicio 2</button></form>
+                <form method="get" action="ejercicio3.html"></form><button class="button">Ejercicio 3</button>
+                <form method="get" action="parquenatural/index.html"></form><button class="button">Ejercicio 6</button>
+                <form method="get" action="https://github.com/mednologic/"></form><button class="button">Github</button>
+                <form method="get" action="https://www.linkedin.com/in/oriollopezbosch/"></form><button class="button">Linkedn</button>
         </div>
 <!-- __________________________________________________________________ -->
         
