"Correction of one button class ref"

--- a/TA28/index.html
+++ b/TA28/index.html
@@ -28,7 +28,7 @@
                 
             </div>
             <h1 class="h1_nom">J.Oriol López Bosch UD28</h1>
-                <form method="get" action="ejercicio1.html"><button class="button_sel">Ejercicio 1</button></form>
+                <form method="get" action="ejercicio1.html"><button class="button">Ejercicio 1</button></form>
                 <form method="get" action="ejercicio2.html"><button class="button">Ejercicio 2</button></form>
                 <form method="get" action="ejercicio3.html"></form><button class="button">Ejercicio 3</button>
                 <form method="get" action="parquenatural/index.html"></form><button class="button">Ejercicio 6</button>
